--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,17 +1,18 @@
 <div class="container" id="task-container">
     <div class="d-flex flex-row justify-content-between align-items-center">
-        <div> Current Time: {{formatedTime}}</div>
+        <app-clock></app-clock>
         <div class="d-flex justify-content-end" id="task-bar">
             <form class="d-flex" id="search-bar">
                 <input class="form-control me-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
             <div class="d-flex">
-                <button class="btn btn-success my-2 my-sm-0" type="button">Add Task</button>
+                <app-button
+                    (btnClick)="toggleAddTask()"
+                    ></app-button>
             </div>
         </div>
     </div>
     <div id="task-list">
-
     </div>
 </div>
