transfer db into json file
Swap the mock task temporary db for a json file.
Minor styling changes in task-list

--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -7,7 +7,13 @@ h3 {
     max-width: 70%;
 }
 
-svg:hover {
+i {
+    padding-top: 5px;
+    height: 16px;
+    width: 16px;
+}
+
+i:hover {
     cursor: pointer;
     color: red;
 }
