delete task functionality

--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex justify-content-between">
         <h3>{{ task.text }}</h3>
         <i class="bi bi-x-circle"
-           (click)="onDelete()"></i>
+           (click)="onDelete(task)"></i>
     </div>
     <p>{{ task.day }}</p>
 </div>
