--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -18,6 +18,7 @@
             <app-task-item
                 *ngFor="let task of tasks"
                 [task]= "task"
+                (onDeleteTask)="deleteTask(task)"
             ></app-task-item>
         </div>
         <div id="searched-items" class="task-container">
