--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -19,6 +19,7 @@
                 *ngFor="let task of tasks"
                 [task]= "task"
                 (onDeleteTask)="deleteTask(task)"
+                (onToggleReminder)="toggleReminder(task)"
             ></app-task-item>
         </div>
         <div id="searched-items" class="task-container">
