fix added tasks problem
Fixed the problem with newly added tasks showing while in the add task form.
Fixed another problem with the add task button not reseting properly when in the about page.
Minor styling added to the add task form.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="bg-light text-center">
     © 2020 Copyright:
-    <a class="text-black" href="#">About</a>
+    <a class="text-black" routerLink="about">About</a>
 </footer>
