--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,41 +1,49 @@
 <form 
+    class="d-flex flex-column align-items-center"
     (ngSubmit)="onSubmit()"
     *ngIf="showAddTask"
 >
-    <div class="form-control">
-        <label for="text">Task</label>
-        <input 
-            type="text" 
-            name="text" 
-            id="text" 
-            placeholder="Name of your task"
-            [(ngModel)]="text"
-        >
-    </div>
+    <fieldset>
+        <div class="form-group">
+            <label for="text" class="form-label mt-4">Task</label>
+            <input 
+                class="form-control"
+                type="text" 
+                name="text" 
+                id="text" 
+                placeholder="Name of your task"
+                [(ngModel)]="text"
+            >
+        </div>
 
-    <div class="form-control">
-        <label for="day">Day & Time</label>
-        <input 
-            type="text" 
-            name="day" 
-            id="day" 
-            placeholder="Date of your task"
-            [(ngModel)]="day"
-        >
-    </div>
+        <div class="form-group">
+            <label for="day" class="form-label mt-4">Day & Time</label>
+            <input 
+                class="form-control"
+                type="text" 
+                name="day" 
+                id="day" 
+                placeholder="Date of your task"
+                [(ngModel)]="day"
+            >
+        </div>
 
-    <div class="form-control">
-        <label for="reminder">Reminder</label>
+        <div class="form-group">
+            <label for="reminder" class="form-label mt-4">Reminder</label>
+            <div class="form-check form-switch">
+                <input 
+                    class="form-check-input"
+                    type="checkbox" 
+                    name="reminder" 
+                    id="reminder"
+                    [(ngModel)]="reminder"
+                >
+            </div>
+        </div>
+    </fieldset>
         <input 
-            type="checkbox" 
-            name="reminder" 
-            id="reminder"
-            [(ngModel)]="reminder"
+            type="submit" 
+            value="Save Task" 
+            class="btn btn-success"
         >
-    </div>
-
-    <input 
-        type="submit" 
-        value="Save Task" 
-        class="btn btn-success">
 </form>
