--- a/src/app/components/task-item/task-item.component.css
+++ b/src/app/components/task-item/task-item.component.css
@@ -1,4 +1,9 @@
 
+#card {
+    margin-bottom: .5em;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .reminder {
     border-left: 3px solid green;
 }
